--- a/angular-app/src/app/login/login.component.css
+++ b/angular-app/src/app/login/login.component.css
@@ -3,17 +3,27 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
 
 body{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,14,154,1) 35%, rgba(0,212,255,1) 100%);
     font-family: 'Poppins', sans-serif;
-
 }
+
+.gradient-text {
+    font-size: 3rem;
+    font-weight: 900;
+    background: linear-gradient(90deg, #02AABD, #00CDAC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-top: 50px;
+}
+
 form{
     border-radius: 20px;
-    margin-top: 150px !important;
+    margin-top: 50px !important;
     width: 24% !important;
     background-color: white !important;
     padding: 50px;
@@ -24,7 +34,6 @@ form{
     border: none;
     border-radius: 50px;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,14,154,1) 35%, rgba(0,212,255,1) 100%);
-
 }
 
 .form-control{
@@ -34,19 +43,24 @@ form{
     border: none;
     border-bottom: 1px solid;
     border-radius: 4px 4px 0 0;
-    }
- h4{
+}
+
+h4{
     font-size: 2rem !important;
     font-weight: 700;
- }
- .form-label{
+}
+
+.form-label{
     font-weight: 800 !important;
- }
+}
+
 @media only screen and (max-width: 600px) {
     form {
         width: 100% !important;
     }
-  }
+}
+
+
 
 
 
