--- a/angular-app/src/app/home/home.component.html
+++ b/angular-app/src/app/home/home.component.html
@@ -12,17 +12,17 @@
         <h1 class="display-4 text-center">MotoSell</h1>
         <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container">
-            <a class="navbar-brand" href="#">Witaj, {{ userName || 'Guest' }}!</a>
+            <a class="navbar-brand">Witaj, {{ userName || 'Guest' }}!</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#home">Strona Główna</a>
+                  <a class="nav-link" routerLink="/home">Strona Główna</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#myAds">Moje Ogłoszenia</a>
+                  <a class="nav-link" routerLink="/home/ads">Moje Ogłoszenia</a>
                 </li>
               </ul>
             </div>
@@ -33,15 +33,7 @@
     </header>
 
     <main class="container mt-5">
-      <section id="home">
-        <h2>Witaj na MotoSell!</h2>
-        <p>Dodaj i przeglądaj ogłoszenia samochodowe w prosty sposób. Skorzystaj z poniższych zakładek, aby zarządzać swoimi ogłoszeniami lub przejść do strony głównej.</p>
-      </section>
-
-      <section id="myAds" class="mt-5">
-        <h2>Moje Ogłoszenia</h2>
-        <p>W tym miejscu możesz zarządzać swoimi ogłoszeniami. Możesz edytować, usuwać lub dodawać nowe ogłoszenia.</p>
-      </section>
+      <router-outlet></router-outlet>
     </main>
 
     <footer class="bg-dark text-white text-center p-3 mt-5">
@@ -50,6 +42,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
+
 
 
 
